# trecs

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: main.yaml
src/spotify_recommender/: data.py  models.py  schema.sql  util.py
src/spotify_recommender/data/: __init__.py  models.py  util.py
src/spotify_recommender/experiments/: decoder-only.json  decoder_only.py  util.py
src/spotify_recommender/scripts/: build_db.py  get_token.py  schema.sql  train.py
src/trecs/: models.py  util.py
src/trecs/data/: models.py  util.py
src/trecs/experiments/: __init__.py  decoder-only.json  decoder_only.py  util.py
src/trecs/experiments/decoder_only/: __init__.py  _base.py  decoder_only_uniform_softmax_loss.py  decoder_only_with_denominator_softmax_loss.py
src/trecs/scripts/: build_db.py  predict.py  schema.sql  train.py
tests/: test_data.py  test_experiments.py  test_util.py
tests/assets/: decoder-only-mini.json  decoder_only_mini_experiment.py  test_mpd_slice.json
tests/scripts/: test_build_db.py  test_train.py
