[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-recommender"
version = "0.1.0"
description = "Conversational recommender for Spotify playlists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "collectiontools>=0.2.0",
    "fastapi>=0.116.1",
    "flax>=0.11.0",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.11",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "scikit-learn>=1.7.1",
]
