[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "trecs"
version = "0.1.0"
description = "Conversational recommender for Spotify playlists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "collectiontools>=0.2.0",
    "fastapi>=0.116.1",
    "flax>=0.10.4",
    "grain>=0.2.11",
    "httpx>=0.28.1",
    "orbax-checkpoint>=0.11.20",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.11",
    "python-dotenv>=1.1.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "scikit-learn>=1.7.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Sharding info not provided when restoring. Populating sharding info from sharding file.:UserWarning"
]
addopts = "-v"
